fix: 修复种子链接失效

--- a/app/public/static/locales/en/common.json
+++ b/app/public/static/locales/en/common.json
@@ -70,5 +70,6 @@
   "Download.Done": "Done",
   "Download.Buffer": "Buffer",
   "Download.Total": "Total",
-  "Download.Save Local": "Save Local"
+  "Download.Save Local": "Save Local",
+  "OpenEH": "Open in EHentai"
 }
