--- a/app/public/static/locales/zh/common.json
+++ b/app/public/static/locales/zh/common.json
@@ -70,5 +70,6 @@
   "Download.Done": "完成",
   "Download.Buffer": "缓冲区",
   "Download.Total": "总数",
-  "Download.Save Local": "保存到本地"
+  "Download.Save Local": "保存到本地",
+  "OpenEH": "在 Ehentai 中打开"
 }
