feat:首页增加登录校验，全局样式增加iphoneX适配

--- a/app/public/static/locales/en/common.json
+++ b/app/public/static/locales/en/common.json
@@ -1,5 +1,5 @@
 {
-  "Front Page": "Front Page",
+  "FrontPage": "Home",
   "Watched": "Watched",
   "Popular": "Popular",
   "Favorites": "Favorites",
