feat: 更新登录页面，更新i18n的字段命名

--- a/app/public/static/locales/en/common.json
+++ b/app/public/static/locales/en/common.json
@@ -18,36 +18,36 @@
   "Theme.dark": "Dark",
   "More": "More",
   "Loading": "Loading",
-  "Reach End": "Reach End",
-  "Sign In": "Sign In",
-  "Sign In.info": "Due to browser security restrictions, you must log in to the <1>exhentai</1> site in the current browser to view pictures normally",
-  "Sign In.Email": "Email",
-  "Sign In.Cookie": "Cookie",
-  "Sign In.Email Address": "Email Address",
-  "Sign In.Password": "Password",
+  "ReachEnd": "Reach End",
+  "SignIn": "Sign In",
+  "SignIn.info": "Due to browser security restrictions, you must log in to the <1>exhentai</1> site in the current browser to view pictures normally",
+  "SignIn.Email": "Email",
+  "SignIn.Cookie": "Cookie",
+  "SignIn.EmailAddress": "Email Address",
+  "SignIn.Password": "Password",
   "Download": "Download",
-  "G.no comments": "no comments",
+  "G.noComments": "no comments",
   "G.Comments": "Comments",
-  "G.Gallery Info": "Gallery Info",
-  "G.Gallery Info.Key": "Key",
-  "G.Gallery Info.Value": "Value",
-  "G.Gallery Info.gid": "gid",
-  "G.Gallery Info.token": "token",
-  "G.Gallery Info.title": "Title",
-  "G.Gallery Info.title_jpn": "Title jpn",
-  "G.Gallery Info.category": "Category",
-  "G.Gallery Info.thumb": "Thumb",
-  "G.Gallery Info.uploader": "Uploader",
-  "G.Gallery Info.posted": "Posted",
-  "G.Gallery Info.filecount": "Length",
-  "G.Gallery Info.filesize": "Filesize",
-  "G.Gallery Info.rating": "Rating",
-  "G.Gallery Info.time": "Posted",
-  "G.Gallery Info.url": "URL",
-  "G.Gallery Info.rating_count": "Rating count",
-  "G.Gallery Info.favcount": "Favcount",
-  "G.Gallery Info.favoritelink": "Favoritelink",
-  "G.no tags": "No tags have been added for this gallery yet",
+  "G.GalleryInfo": "Gallery Info",
+  "G.GalleryInfo.Key": "Key",
+  "G.GalleryInfo.Value": "Value",
+  "G.GalleryInfo.gid": "gid",
+  "G.GalleryInfo.token": "token",
+  "G.GalleryInfo.title": "Title",
+  "G.GalleryInfo.title_jpn": "Title jpn",
+  "G.GalleryInfo.category": "Category",
+  "G.GalleryInfo.thumb": "Thumb",
+  "G.GalleryInfo.uploader": "Uploader",
+  "G.GalleryInfo.posted": "Posted",
+  "G.GalleryInfo.filecount": "Length",
+  "G.GalleryInfo.filesize": "Filesize",
+  "G.GalleryInfo.rating": "Rating",
+  "G.GalleryInfo.time": "Posted",
+  "G.GalleryInfo.url": "URL",
+  "G.GalleryInfo.rating_count": "Rating count",
+  "G.GalleryInfo.favcount": "Favcount",
+  "G.GalleryInfo.favoritelink": "Favoritelink",
+  "G.noTags": "No tags have been added for this gallery yet",
   "G.Torrent.Added": "Added",
   "G.Torrent.Size": "Size",
   "G.Torrent.Tsize": "Torrent size",
@@ -55,21 +55,23 @@
   "EH.User": "User",
   "EH.Logout": "Logout",
   "EH.Logout.Content": "Are you sure?",
-  "EH.User Cookie": "User Cookie",
+  "EH.UserCookie": "User Cookie",
   "EH.Setting": "Setting",
-  "EH.Ehentai Setting": "Ehentai Setting",
-  "EH.Ehentai Tags": "Ehentai Tags",
-  "EH.KEEP IT SAFE": "KEEP IT SAFE",
+  "EH.EhentaiSetting": "Ehentai Setting",
+  "EH.EhentaiTags": "Ehentai Tags",
+  "EH.KeepItSafe": "KEEP IT SAFE",
   "Copy": "Copy",
   "Cancel": "Cancel",
   "Search": "Search",
   "Search.Short": "The search string is too short, and was ignored.",
-  "Search.No this found": "No this found",
+  "Search.NoThisFound": "No this found",
   "Download.Progress": "Download Progress",
-  "Download.Error Info": "Error Info",
+  "Download.ErrorInfo": "Error Info",
   "Download.Done": "Done",
   "Download.Buffer": "Buffer",
   "Download.Total": "Total",
-  "Download.Save Local": "Save Local",
-  "OpenEH": "Open in EHentai"
+  "Download.SaveLocal": "Save Local",
+  "OpenEH": "Open in EHentai",
+  "Back": "Back",
+  "Next": "Next"
 }
