--- a/app/public/static/locales/zh/common.json
+++ b/app/public/static/locales/zh/common.json
@@ -18,36 +18,36 @@
   "Theme.dark": "暗色",
   "More": "查看更多",
   "Loading": "加载中",
-  "Reach End": "已到底",
-  "Sign In": "登录",
-  "Sign In.info": "由于浏览器安全限制，您必须在当前浏览器里登录过 <1>exhentai</1> 站点，才能正常查看图片",
-  "Sign In.Email": "邮箱",
-  "Sign In.Cookie": "Cookie",
-  "Sign In.Email Address": "帐号",
-  "Sign In.Password": "密码",
+  "ReachEnd": "已到底",
+  "SignIn": "登录",
+  "SignIn.info": "由于浏览器安全限制，您必须在当前浏览器里登录过 <1>exhentai</1> 站点，才能正常查看图片",
+  "SignIn.Email": "邮箱",
+  "SignIn.Cookie": "Cookie",
+  "SignIn.EmailAddress": "帐号",
+  "SignIn.Password": "密码",
   "Download": "下载",
-  "G.no comments": "暂无评论",
+  "G.noComments": "暂无评论",
   "G.Comments": "评论列表",
-  "G.Gallery Info": "画廊信息",
-  "G.Gallery Info.Key": "键",
-  "G.Gallery Info.Value": "值",
-  "G.Gallery Info.gid": "gid",
-  "G.Gallery Info.token": "token",
-  "G.Gallery Info.title": "标题",
-  "G.Gallery Info.title_jpn": "日文标题",
-  "G.Gallery Info.category": "分类",
-  "G.Gallery Info.thumb": "缩略图",
-  "G.Gallery Info.uploader": "上传者",
-  "G.Gallery Info.posted": "上传时间",
-  "G.Gallery Info.filecount": "页数",
-  "G.Gallery Info.filesize": "大小",
-  "G.Gallery Info.rating": "评价",
-  "G.Gallery Info.time": "上传时间",
-  "G.Gallery Info.url": "链接",
-  "G.Gallery Info.rating_count": "评价次数",
-  "G.Gallery Info.favcount": "收藏次数",
-  "G.Gallery Info.favoritelink": "收藏夹",
-  "G.no tags": "暂无标签",
+  "G.GalleryInfo": "画廊信息",
+  "G.GalleryInfo.Key": "键",
+  "G.GalleryInfo.Value": "值",
+  "G.GalleryInfo.gid": "gid",
+  "G.GalleryInfo.token": "token",
+  "G.GalleryInfo.title": "标题",
+  "G.GalleryInfo.title_jpn": "日文标题",
+  "G.GalleryInfo.category": "分类",
+  "G.GalleryInfo.thumb": "缩略图",
+  "G.GalleryInfo.uploader": "上传者",
+  "G.GalleryInfo.posted": "上传时间",
+  "G.GalleryInfo.filecount": "页数",
+  "G.GalleryInfo.filesize": "大小",
+  "G.GalleryInfo.rating": "评价",
+  "G.GalleryInfo.time": "上传时间",
+  "G.GalleryInfo.url": "链接",
+  "G.GalleryInfo.rating_count": "评价次数",
+  "G.GalleryInfo.favcount": "收藏次数",
+  "G.GalleryInfo.favoritelink": "收藏夹",
+  "G.noTags": "暂无标签",
   "G.Torrent.Added": "上传时间",
   "G.Torrent.Size": "大小",
   "G.Torrent.Tsize": "Torrent 大小",
@@ -55,21 +55,23 @@
   "EH.User": "用户",
   "EH.Logout": "登出",
   "EH.Logout.Content": "确定退出？",
-  "EH.User Cookie": "用户信息",
+  "EH.UserCookie": "用户信息",
   "EH.Setting": "设置",
-  "EH.Ehentai Setting": "EHentai 设置",
-  "EH.Ehentai Tags": "EHentai 标签管理",
-  "EH.KEEP IT SAFE": "注意信息安全",
+  "EH.EhentaiSetting": "EHentai 设置",
+  "EH.EhentaiTags": "EHentai 标签管理",
+  "EH.KeepItSafe": "注意信息安全",
   "Copy": "复制",
   "Cancel": "取消",
   "Search": "搜索",
   "Search.Short": "输入内容不能少于2字符",
-  "Search.No this found": "什么都没找到",
+  "Search.NoThisFound": "什么都没找到",
   "Download.Progress": "下载进度",
-  "Download.Error Info": "错误信息",
+  "Download.ErrorInfo": "错误信息",
   "Download.Done": "完成",
   "Download.Buffer": "缓冲区",
   "Download.Total": "总数",
-  "Download.Save Local": "保存到本地",
-  "OpenEH": "在 Ehentai 中打开"
+  "Download.SaveLocal": "保存到本地",
+  "OpenEH": "在 Ehentai 中打开",
+  "Back": "上一步",
+  "Next": "下一步"
 }
