feat: 修改主页接口

--- a/app/public/static/locales/en/common.json
+++ b/app/public/static/locales/en/common.json
@@ -47,6 +47,7 @@
   "G.GalleryInfo.rating_count": "Rating count",
   "G.GalleryInfo.favcount": "Favcount",
   "G.GalleryInfo.favoritelink": "Favoritelink",
+  "G.GalleryInfo.language": "Language",
   "G.noTags": "No tags have been added for this gallery yet",
   "G.Torrent.Added": "Added",
   "G.Torrent.Size": "Size",
