feat: 修改详情页面的样式

--- a/app/public/static/locales/en/common.json
+++ b/app/public/static/locales/en/common.json
@@ -74,5 +74,6 @@
   "Download.SaveLocal": "Save Local",
   "OpenEH": "Open in EHentai",
   "Back": "Back",
-  "Next": "Next"
+  "Next": "Next",
+  "Read": "Read"
 }
