--- a/app/public/static/locales/zh/common.json
+++ b/app/public/static/locales/zh/common.json
@@ -74,5 +74,6 @@
   "Download.SaveLocal": "保存到本地",
   "OpenEH": "在 Ehentai 中打开",
   "Back": "上一步",
-  "Next": "下一步"
+  "Next": "下一步",
+  "Read": "阅读"
 }
