feat: 增加横向阅览功能

--- a/app/public/static/locales/en/common.json
+++ b/app/public/static/locales/en/common.json
@@ -75,5 +75,9 @@
   "OpenEH": "Open in EHentai",
   "Back": "Back",
   "Next": "Next",
-  "Read": "Read"
+  "Read": "Read",
+  "Direction": "Direction",
+  "Vertical": "vertical",
+  "LTR": "LTR",
+  "RTL": "RTL"
 }
