feat: Theme mode add auto options

--- a/app/public/static/locales/en/common.json
+++ b/app/public/static/locales/en/common.json
@@ -14,6 +14,7 @@
   "Advanced": "Advanced",
   "Language": "Language",
   "Theme": "Theme",
+  "Theme.auto": "Auto",
   "Theme.light": "Light",
   "Theme.dark": "Dark",
   "More": "More",
