--- a/app/public/static/locales/th/common.json
+++ b/app/public/static/locales/th/common.json
@@ -14,6 +14,7 @@
   "Advanced": "ขั้นสูง",
   "Language": "ภาษา",
   "Theme": "รูปแบบ",
+  "Theme.auto": "อัตโนมัติ",
   "Theme.light": "สว่าง",
   "Theme.dark": "มืด",
   "More": "อื่นๆ",
