--- a/app/public/static/locales/zh/common.json
+++ b/app/public/static/locales/zh/common.json
@@ -14,6 +14,7 @@
   "Advanced": "高级设置",
   "Language": "语言",
   "Theme": "主题",
+  "Theme.auto": "跟随系统",
   "Theme.light": "亮色",
   "Theme.dark": "暗色",
   "More": "查看更多",
