Added Korean translation

--- a/app/public/static/locales/kr/common.json
+++ b/app/public/static/locales/kr/common.json
@@ -21,7 +21,7 @@
   "Loading": "불러오는 중…",
   "ReachEnd": "한계에 도달하였습니다.",
   "SignIn": "로그인",
-  "SignIn.info": "브라우저 보안 제한으로 인하여 먼저 ExHentai 사이트에 로그인해야 합니다.",
+  "SignIn.info": "브라우저 보안으로 인하여 먼저 ExHentai 사이트에 로그인해야 합니다.",
   "SignIn.Email": "이메일",
   "SignIn.Cookie": "쿠키",
   "SignIn.EmailAddress": "이메일 주소",
@@ -40,7 +40,7 @@
   "G.GalleryInfo.thumb": "섬네일",
   "G.GalleryInfo.uploader": "업로더",
   "G.GalleryInfo.posted": "날짜",
-  "G.GalleryInfo.filecount": "Length",
+  "G.GalleryInfo.filecount": "페이지",
   "G.GalleryInfo.filesize": "크기",
   "G.GalleryInfo.rating": "평가",
   "G.GalleryInfo.time": "날짜",
