fix: change malay language code  ml to ms

--- a/app/public/static/locales/en/common.json
+++ b/app/public/static/locales/en/common.json
@@ -78,7 +78,7 @@
   "Next": "Next",
   "Read": "Read",
   "Direction": "Direction",
-  "Vertical": "vertical",
+  "Vertical": "Vertical",
   "LTR": "LTR",
   "RTL": "RTL"
 }
