Update KR lang files

--- a/app/public/static/locales/kr/common.json
+++ b/app/public/static/locales/kr/common.json
@@ -10,7 +10,7 @@
   "About.Source": "소스 코드",
   "About.License": "라이선스",
   "About.Version": "빌드 버전",
-  "About.EhentaiViewDesc": "EhentaiView는 E-Hentai에서 운영하는 사이트가 아닙니다.",
+  "About.EhentaiViewDesc": "EhentaiView는 E-Hentai.org에서 운영하는 사이트가 아닙니다.",
   "Advanced": "고급",
   "Language": "언어",
   "Theme": "테마",
@@ -21,7 +21,7 @@
   "Loading": "불러오는 중…",
   "ReachEnd": "한계에 도달하였습니다.",
   "SignIn": "로그인",
-  "SignIn.info": "브라우저 보안으로 인하여 먼저 ExHentai 사이트에 로그인해야 합니다.",
+  "SignIn.info": "브라우저 보안으로 인하여 먼저 <1>ExHentai</1> 사이트에 로그인해야 합니다.",
   "SignIn.Email": "이메일",
   "SignIn.Cookie": "쿠키",
   "SignIn.EmailAddress": "이메일 주소",
@@ -59,9 +59,9 @@
   "EH.Logout.Content": "정말 로그아웃 하시겠습니까?",
   "EH.UserCookie": "유저 쿠키",
   "EH.Setting": "설정",
-  "EH.EhentaiSetting": "E-Hentai 설정",
-  "EH.EhentaiTags": "E-Hentai 태그",
-  "EH.KeepItSafe": "안전하게 보관하세요.",
+  "EH.EhentaiSetting": "EHentai 설정",
+  "EH.EhentaiTags": "EHentai 태그",
+  "EH.KeepItSafe": "안전하게 보관하세요!",
   "Copy": "복사",
   "Cancel": "취소",
   "Search": "검색",
@@ -78,7 +78,7 @@
   "Next": "다음",
   "Read": "읽기",
   "Direction": "방향",
-  "Vertical": "수직",
-  "LTR": "LTR",
-  "RTL": "RTL"
+  "Vertical": "상하",
+  "LTR": "좌우",
+  "RTL": "우좌"
 }
