feat #19 Add gallery tag and add gallery tag show/hidden settings

--- a/app/public/static/locales/kr/common.json
+++ b/app/public/static/locales/kr/common.json
@@ -80,5 +80,9 @@
   "Direction": "방향",
   "Vertical": "상하",
   "LTR": "좌우",
-  "RTL": "우좌"
+  "RTL": "우좌",
+  "ShowTag": "Show Gallery Tag",
+  "ShowTag.Watched": "Only Watched",
+  "ShowTag.All": "All",
+  "ShowTag.Hidden": "Hidden"
 }
