--- a/app/public/static/locales/ms/common.json
+++ b/app/public/static/locales/ms/common.json
@@ -80,5 +80,9 @@
   "Direction": "Arah",
   "Vertical": "Menegak",
   "LTR": "LTR",
-  "RTL": "RTL"
+  "RTL": "RTL",
+  "ShowTag": "Show Gallery Tag",
+  "ShowTag.Watched": "Only Watched",
+  "ShowTag.All": "All",
+  "ShowTag.Hidden": "Hidden"
 }
