feat: add search similar galleries for mobile.

--- a/app/public/static/locales/kr/common.json
+++ b/app/public/static/locales/kr/common.json
@@ -84,5 +84,6 @@
   "ShowTag": "갤러리 태그 보기",
   "ShowTag.Watched": "Watched 만",
   "ShowTag.All": "모두",
-  "ShowTag.Hidden": "숨김"
+  "ShowTag.Hidden": "숨김",
+  "Similar": "Similar"
 }
