--- a/app/public/static/locales/th/common.json
+++ b/app/public/static/locales/th/common.json
@@ -84,5 +84,6 @@
   "ShowTag": "แสดงแท็กแกลเลอรี",
   "ShowTag.Watched": "เฉพาะที่ติดตาม",
   "ShowTag.All": "ทั้งหมด",
-  "ShowTag.Hidden": "ซ่อน"
+  "ShowTag.Hidden": "ซ่อน",
+  "Similar": "Similar"
 }
