--- a/app/public/static/locales/en/common.json
+++ b/app/public/static/locales/en/common.json
@@ -84,5 +84,6 @@
   "ShowTag": "Show Gallery Tag",
   "ShowTag.Watched": "Only Watched",
   "ShowTag.All": "All",
-  "ShowTag.Hidden": "Hidden"
+  "ShowTag.Hidden": "Hidden",
+  "Similar": "Similar"
 }
