Update KR lang files

--- a/app/public/static/locales/kr/common.json
+++ b/app/public/static/locales/kr/common.json
@@ -85,5 +85,5 @@
   "ShowTag.Watched": "Watched 만",
   "ShowTag.All": "모두",
   "ShowTag.Hidden": "숨김",
-  "Similar": "Similar"
+  "Similar": "유사"
 }
