feat: add image adaptive control

--- a/public/locales/kr/common.json
+++ b/public/locales/kr/common.json
@@ -85,5 +85,6 @@
   "ShowTag.Watched": "Watched 만",
   "ShowTag.All": "모두",
   "ShowTag.Hidden": "숨김",
-  "Similar": "유사"
+  "Similar": "유사",
+  "imgFit":"픽처 어댑티브"
 }
