--- a/public/locales/th/common.json
+++ b/public/locales/th/common.json
@@ -85,5 +85,6 @@
   "ShowTag.Watched": "เฉพาะที่ติดตาม",
   "ShowTag.All": "ทั้งหมด",
   "ShowTag.Hidden": "ซ่อน",
-  "Similar": "คล้ายกัน"
+  "Similar": "คล้ายกัน",
+  "imgFit":"การปรับภาพ"
 }
