--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -85,5 +85,6 @@
   "ShowTag.Watched": "Only Watched",
   "ShowTag.All": "All",
   "ShowTag.Hidden": "Hidden",
-  "Similar": "Similar"
+  "Similar": "Similar",
+  "imgFit":"Picture adaptive"
 }
