--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -85,5 +85,6 @@
   "ShowTag.Watched": "仅在订阅中显示",
   "ShowTag.All": "全部显示",
   "ShowTag.Hidden": "不显示",
-  "Similar": "相关画廊"
+  "Similar": "相关画廊",
+  "imgFit":"图片自适应"
 }
